--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,14 @@ magic-filter==1.0.12
 marshmallow==4.0.0
 multidict==6.4.3
 propcache==0.3.1
-psycopg==3.2.6
+psycopg==3.2.11
+psycopg-binary==3.2.11
 psycopg-pool==3.2.6
 pydantic==2.11.3
-pydantic-core==2.33.1
+pydantic_core==2.33.1
 python-dotenv==1.1.0
 redis==5.2.1
-typing-extensions==4.13.2
 typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
 yarl==1.20.0
